@@ -1,3 +1,12 @@
+2009-09-08  Alejandro G. Castro  <alex@igalia.com>
+
+	* hildon/hildon-pannable-area.c,
+	(hildon_pannable_area_timeout): Fixed problem with the timeout
+	function, we need to move before decelerating the first time or we
+	are loosing the first jump.
+
+	Fixes: NB#137604 (Pannable scroll_to does not move correctly)
+
 2009-09-07  Claudio Saavedra  <csaavedra@igalia.com>
 
 	[2.2.0 Release Candidate 3]
